--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,11 +25,13 @@
         android:orientation="horizontal">
 
         <RadioButton
+            android:id="@+id/radio_button_female"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Female" />
 
         <RadioButton
+            android:id="@+id/radio_button_male"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Male" />
@@ -37,6 +39,7 @@
     </RadioGroup>
 
     <EditText
+        android:id="@+id/edit_text_age"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
@@ -50,12 +53,14 @@
         android:orientation="horizontal">
 
         <EditText
+            android:id="@+id/edit_text_feet"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="Feet"
             android:inputType="number" />
 
         <EditText
+            android:id="@+id/edit_text_inches"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="Inches"
@@ -65,6 +70,7 @@
 
 
     <EditText
+        android:id="@+id/edit_text_weight"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
@@ -72,11 +78,13 @@
         android:inputType="number" />
 
     <Button
+        android:id="@+id/button_calculate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Calculate" />
 
     <TextView
+        android:id="@+id/text_view_result"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="24dp"
